test: add lock schema validation coverage